--- a/src/templates/_macros/_preview.twig
+++ b/src/templates/_macros/_preview.twig
@@ -1,4 +1,4 @@
-{% import "uploadit/_macros" as macros %}
+{% import "upload/_macros" as macros %}
 
 {% set asset = asset ?? false %}
 {% set name = name ?? false %}
