Added header view

--- a/src/templates/_macros/_preview.twig
+++ b/src/templates/_macros/_preview.twig
@@ -47,6 +47,9 @@
                 {% case "logo" %}
                     <img class="uploadit--round" src="{{ assetUrl }}" alt="{{ asset.title }}" />
 
+                {% case "header" %}
+                    <img class="uploadit--landscape" src="{{ assetUrl }}" alt="{{ asset.title }}" />
+
             {% endswitch %}
 
         </span>
