Improve upload error message styling, progress text and testing drop to upload

--- a/src/templates/uploader.twig
+++ b/src/templates/uploader.twig
@@ -48,13 +48,17 @@
             <div class="uploadit--controls-inner">
 
                 <button type="button" class="uploadit--upload">
-                    {% if uploader.showUploadIcon %}
+                    {# {% if uploader.showUploadIcon %}
                       {{ macros.icon('upload') }}
                     {% endif %}
-                    <span class="uploadit--label">{{ uploader.selectText }}</span>
+
                     {% if uploader.enableDropToUpload %}
                         <span class="uploadit--or">{{ 'or'|t('uploadit') }}</span>
                         <span class="uploadit--btn">{{ uploader.dropText }}</span>
+                    {% endif %} #}
+                    <span class="uploadit--label">{{ uploader.selectText }}</span>
+                    {% if uploader.enableDropToUpload %}
+                        <p>or drop files here</p>
                     {% endif %}
                 </button>
 
