--- a/src/templates/uploader.twig
+++ b/src/templates/uploader.twig
@@ -34,7 +34,7 @@
                        transform: uploader.transform,
                        enableReorder: uploader.enableReorder,
                        enableRemove: uploader.enableRemove,
-                       view: uploader.view
+                       view: uploader.view,
                    }) }}
 
                {% endfor %}
