--- a/src/templates/userPhoto.twig
+++ b/src/templates/userPhoto.twig
@@ -57,7 +57,7 @@
                     </a>
 
                      {% if uploader.photo and uploader.enableRemove %}
-                        <a class="uploadit--remove">Delete</a>
+                        <button class="uploadit--remove">Delete</button>
                     {% endif %}
 
 
