--- a/src/templates/_macros/_icon.twig
+++ b/src/templates/_macros/_icon.twig
@@ -1,4 +1,4 @@
-{%- spaceless %}
+{% apply spaceless %}
 
 	{% set icon = icon ?? false %}
 	{% switch icon %}
@@ -80,4 +80,4 @@
 
 		{% endswitch %}
 
-{% endspaceless -%}
+{% endapply %}
